working full time game, not working reset game btn

--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
             <hr class="line">
             <h2 class="summary-site__header">Congratulations!</h2>
             <p class="summary-site__speed">Your speed: <span class="summary-site__speed-amount"
-                    id="summary-site-wpm">51.8</span> words per
+                    id="summary-site-wpm"></span> words per
                 second</p>
             <p class="summary-site__accuracy">Your accuracy: <span class="summary-site__accuracy-amount"
-                    id="summary-site-accuracy">96</span>%</p>
+                    id="summary-site-accuracy"></span>%</p>
             <button id="try-again-btn" class="button button-pink">Try again</button>
             <button id="home-page-btn" class="button button-purple">Home page</button>
         </section>
