first open beta of application

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 second</p>
             <p class="summary-site__accuracy">Your accuracy: <span class="summary-site__accuracy-amount"
                     id="summary-site-accuracy"></span>%</p>
-            <button id="try-again-btn" class="button button-pink">Try again</button>
+            <!-- <button id="try-again-btn" class="button button-pink">Try again</button> -->
             <button id="home-page-btn" class="button button-purple">Home page</button>
         </section>
     </div>
