updated instruction and button

--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
                 Instruction
             </h2>
             <p class="starter-site__instruction">
-                Start one of the tests below the instruction, then You will be move to the site with text you must type.
-                When you start writing, the time will start counting down (1/3/5 minutes, your choice), after the time
-                is
-                up, You will see how many words You can write in one minute. You will see your accuracy too!
+                Start one of the tests below the instruction, then you will be moved to the site with text you must
+                type. When you start writing, the time will start counting down. If you choose the full-time game, you
+                need to finish the text, and then you will see how many words you can write in one minute and your
+                accuracy too!
             </p>
             <h2 class="starter-site__header">
                 Click button below to check your <span class="starter-site__header--pink">Type</span><span
                     class="starter-site__header--purple">Speed</span>
             </h2>
             <div class="starter-site__button-wrapper">
-                <button id="btn-1" class="button button-pink">1 minute test</button>
+                <button id="btn-1" class="button button-pink">Minute test</button>
                 <button id="btn-full" class="button button-purple">Finish text</button>
             </div>
         </section>
